Adding docker-composer support

--- a/WebApplication5.csproj
+++ b/WebApplication5.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>edf3e273-cdbb-473f-84a9-7a540b620284</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <DockerComposeProjectPath>docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
