--- a/Dockerfile.original
+++ b/Dockerfile.original
@@ -7,10 +7,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["WebApplication5.csproj", "./"]
-RUN dotnet restore "WebApplication5.csproj"
+COPY ["WebApplication5.csproj", ""]
+RUN dotnet restore "./WebApplication5.csproj"
 COPY . .
-WORKDIR "/src/"
+WORKDIR "/src/."
 RUN dotnet build "WebApplication5.csproj" -c Release -o /app/build
 
 FROM build AS publish
